Ampliaciones/bin/sintactico/y.output
   0  $accept : programa $end

   1  programa : lista_definiciones main

   2  llaves_array : '[' CTE_ENTERA ']'
   3               | '[' CTE_ENTERA ']' llaves_array

   4  array : llaves_array tipo

   5  struct : STRUCT '{' lista_campos '}'

   6  campo : lista_id tipo ';'

   7  lista_campos : lista_campos campo
   8               | campo

   9  tipo : INT
  10       | FLOAT
  11       | CHAR
  12       | array
  13       | struct

  14  tipo_simple : INT
  15              | FLOAT
  16              | CHAR

  17  lista_definiciones : lista_definiciones definicion
  18                     |

  19  lista_def_variables : lista_def_variables def_variable_completa
  20                      |

  21  definicion : def_variable_completa
  22             | def_funcion

  23  def_variable_completa : VAR lista_id tipo ';'

  24  def_variable : ID tipo

  25  lista_id : lista_id ',' ID
  26           | ID

  27  lista_parametro_tipo_funcion : lista_parametro_tipo
  28                               |

  29  lista_parametro_tipo : lista_parametro_tipo ',' def_variable
  30                       | def_variable

  31  tipo_funcion : '(' lista_parametro_tipo_funcion ')' tipo_simple
  32               | '(' lista_parametro_tipo_funcion ')'

  33  main : FUNC main_id '(' ')' '{' lista_def_variables lista_sentencias '}'

  34  main_id : MAIN

  35  def_funcion : FUNC ID tipo_funcion '{' lista_def_variables lista_sentencias '}'

  36  lista_sentencias : lista_sentencias sentencia
  37                   |

  38  sentencia : RETURN expresion ';'
  39            | READ '(' lista_expresiones ')' ';'
  40            | WRITE '(' lista_expresiones ')' ';'
  41            | if_else
  42            | while
  43            | asignacion ';'
  44            | ID '(' lista_expresiones_llamada_fun ')' ';'
  45            | for
  46            | dowhile

  47  asignacion : expresion '=' expresion
  48             | expresion '+' '+'
  49             | expresion '-' '-'

  50  for : FOR '(' asignacion ';' expresion ';' asignacion ')' '{' lista_sentencias '}'

  51  if_else : IF expresion '{' lista_sentencias '}' ELSE '{' lista_sentencias '}'
  52          | IF expresion '{' lista_sentencias '}'
  53          | IF '(' expresion ')' '{' lista_sentencias '}' ELSE '{' lista_sentencias '}'
  54          | IF '(' expresion ')' '{' lista_sentencias '}'

  55  while : WHILE '(' expresion ')' '{' lista_sentencias '}'
  56        | WHILE expresion '{' lista_sentencias '}'

  57  dowhile : DO '{' lista_sentencias '}' WHILE '(' expresion ')'

  58  lista_expresiones_llamada_fun : lista_expresiones
  59                                |

  60  lista_expresiones : lista_expresiones ',' expresion
  61                    | expresion

  62  expresion : expresion '+' expresion
  63            | expresion '*' expresion
  64            | expresion '/' expresion
  65            | expresion '-' expresion
  66            | expresion '%' expresion
  67            | expresion EQ expresion
  68            | expresion NOT_EQ expresion
  69            | expresion '>' expresion
  70            | expresion '<' expresion
  71            | expresion L_EQ expresion
  72            | expresion G_EQ expresion
  73            | expresion AND expresion
  74            | expresion OR expresion
  75            | expresion XOR expresion
  76            | ID '(' lista_expresiones_llamada_fun ')'
  77            | tipo '(' expresion ')'
  78            | expresion '[' expresion ']'
  79            | expresion '.' ID
  80            | expresion '!' expresion
  81            | '-' expresion
  82            | '(' expresion ')'
  83            | '!' expresion
  84            | ID
  85            | CTE_CHAR
  86            | CTE_REAL
  87            | CTE_ENTERA
  88            | ternario

  89  ternario : '(' expresion ')' '?' expresion ':' expresion

state 0
	$accept : . programa $end  (0)
	lista_definiciones : .  (18)

	.  reduce 18

	programa  goto 1
	lista_definiciones  goto 2


state 1
	$accept : programa . $end  (0)

	$end  accept


state 2
	programa : lista_definiciones . main  (1)
	lista_definiciones : lista_definiciones . definicion  (17)

	VAR  shift 3
	FUNC  shift 4
	.  error

	main  goto 5
	definicion  goto 6
	def_variable_completa  goto 7
	def_funcion  goto 8


state 3
	def_variable_completa : VAR . lista_id tipo ';'  (23)

	ID  shift 9
	.  error

	lista_id  goto 10


state 4
	main : FUNC . main_id '(' ')' '{' lista_def_variables lista_sentencias '}'  (33)
	def_funcion : FUNC . ID tipo_funcion '{' lista_def_variables lista_sentencias '}'  (35)

	ID  shift 11
	MAIN  shift 12
	.  error

	main_id  goto 13


state 5
	programa : lista_definiciones main .  (1)

	.  reduce 1


state 6
	lista_definiciones : lista_definiciones definicion .  (17)

	.  reduce 17


state 7
	definicion : def_variable_completa .  (21)

	.  reduce 21


state 8
	definicion : def_funcion .  (22)

	.  reduce 22


state 9
	lista_id : ID .  (26)

	.  reduce 26


state 10
	def_variable_completa : VAR lista_id . tipo ';'  (23)
	lista_id : lista_id . ',' ID  (25)

	INT  shift 14
	FLOAT  shift 15
	CHAR  shift 16
	STRUCT  shift 17
	'['  shift 18
	','  shift 19
	.  error

	llaves_array  goto 20
	array  goto 21
	tipo  goto 22
	struct  goto 23


state 11
	def_funcion : FUNC ID . tipo_funcion '{' lista_def_variables lista_sentencias '}'  (35)

	'('  shift 24
	.  error

	tipo_funcion  goto 25


state 12
	main_id : MAIN .  (34)

	.  reduce 34


state 13
	main : FUNC main_id . '(' ')' '{' lista_def_variables lista_sentencias '}'  (33)

	'('  shift 26
	.  error


state 14
	tipo : INT .  (9)

	.  reduce 9


state 15
	tipo : FLOAT .  (10)

	.  reduce 10


state 16
	tipo : CHAR .  (11)

	.  reduce 11


state 17
	struct : STRUCT . '{' lista_campos '}'  (5)

	'{'  shift 27
	.  error


state 18
	llaves_array : '[' . CTE_ENTERA ']'  (2)
	llaves_array : '[' . CTE_ENTERA ']' llaves_array  (3)

	CTE_ENTERA  shift 28
	.  error


state 19
	lista_id : lista_id ',' . ID  (25)

	ID  shift 29
	.  error


state 20
	array : llaves_array . tipo  (4)

	INT  shift 14
	FLOAT  shift 15
	CHAR  shift 16
	STRUCT  shift 17
	'['  shift 18
	.  error

	llaves_array  goto 20
	array  goto 21
	tipo  goto 30
	struct  goto 23


state 21
	tipo : array .  (12)

	.  reduce 12


state 22
	def_variable_completa : VAR lista_id tipo . ';'  (23)

	';'  shift 31
	.  error


state 23
	tipo : struct .  (13)

	.  reduce 13


state 24
	tipo_funcion : '(' . lista_parametro_tipo_funcion ')' tipo_simple  (31)
	tipo_funcion : '(' . lista_parametro_tipo_funcion ')'  (32)
	lista_parametro_tipo_funcion : .  (28)

	ID  shift 32
	')'  reduce 28

	def_variable  goto 33
	lista_parametro_tipo_funcion  goto 34
	lista_parametro_tipo  goto 35


state 25
	def_funcion : FUNC ID tipo_funcion . '{' lista_def_variables lista_sentencias '}'  (35)

	'{'  shift 36
	.  error


state 26
	main : FUNC main_id '(' . ')' '{' lista_def_variables lista_sentencias '}'  (33)

	')'  shift 37
	.  error


state 27
	struct : STRUCT '{' . lista_campos '}'  (5)

	ID  shift 9
	.  error

	lista_campos  goto 38
	campo  goto 39
	lista_id  goto 40


state 28
	llaves_array : '[' CTE_ENTERA . ']'  (2)
	llaves_array : '[' CTE_ENTERA . ']' llaves_array  (3)

	']'  shift 41
	.  error


state 29
	lista_id : lista_id ',' ID .  (25)

	.  reduce 25


state 30
	array : llaves_array tipo .  (4)

	.  reduce 4


state 31
	def_variable_completa : VAR lista_id tipo ';' .  (23)

	.  reduce 23


state 32
	def_variable : ID . tipo  (24)

	INT  shift 14
	FLOAT  shift 15
	CHAR  shift 16
	STRUCT  shift 17
	'['  shift 18
	.  error

	llaves_array  goto 20
	array  goto 21
	tipo  goto 42
	struct  goto 23


state 33
	lista_parametro_tipo : def_variable .  (30)

	.  reduce 30


state 34
	tipo_funcion : '(' lista_parametro_tipo_funcion . ')' tipo_simple  (31)
	tipo_funcion : '(' lista_parametro_tipo_funcion . ')'  (32)

	')'  shift 43
	.  error


state 35
	lista_parametro_tipo_funcion : lista_parametro_tipo .  (27)
	lista_parametro_tipo : lista_parametro_tipo . ',' def_variable  (29)

	','  shift 44
	')'  reduce 27


state 36
	def_funcion : FUNC ID tipo_funcion '{' . lista_def_variables lista_sentencias '}'  (35)
	lista_def_variables : .  (20)

	.  reduce 20

	lista_def_variables  goto 45


state 37
	main : FUNC main_id '(' ')' . '{' lista_def_variables lista_sentencias '}'  (33)

	'{'  shift 46
	.  error


state 38
	struct : STRUCT '{' lista_campos . '}'  (5)
	lista_campos : lista_campos . campo  (7)

	ID  shift 9
	'}'  shift 47
	.  error

	campo  goto 48
	lista_id  goto 40


state 39
	lista_campos : campo .  (8)

	.  reduce 8


state 40
	campo : lista_id . tipo ';'  (6)
	lista_id : lista_id . ',' ID  (25)

	INT  shift 14
	FLOAT  shift 15
	CHAR  shift 16
	STRUCT  shift 17
	'['  shift 18
	','  shift 19
	.  error

	llaves_array  goto 20
	array  goto 21
	tipo  goto 49
	struct  goto 23


state 41
	llaves_array : '[' CTE_ENTERA ']' .  (2)
	llaves_array : '[' CTE_ENTERA ']' . llaves_array  (3)

	.  reduce 2

	llaves_array  goto 50


state 42
	def_variable : ID tipo .  (24)

	.  reduce 24


state 43
	tipo_funcion : '(' lista_parametro_tipo_funcion ')' . tipo_simple  (31)
	tipo_funcion : '(' lista_parametro_tipo_funcion ')' .  (32)

	INT  shift 51
	FLOAT  shift 52
	CHAR  shift 53
	'{'  reduce 32

	tipo_simple  goto 54


state 44
	lista_parametro_tipo : lista_parametro_tipo ',' . def_variable  (29)

	ID  shift 32
	.  error

	def_variable  goto 55


state 45
	lista_def_variables : lista_def_variables . def_variable_completa  (19)
	def_funcion : FUNC ID tipo_funcion '{' lista_def_variables . lista_sentencias '}'  (35)
	lista_sentencias : .  (37)

	VAR  shift 3
	CTE_ENTERA  reduce 37
	CTE_CHAR  reduce 37
	CTE_REAL  reduce 37
	ID  reduce 37
	READ  reduce 37
	WRITE  reduce 37
	WHILE  reduce 37
	IF  reduce 37
	INT  reduce 37
	FLOAT  reduce 37
	CHAR  reduce 37
	STRUCT  reduce 37
	RETURN  reduce 37
	FOR  reduce 37
	DO  reduce 37
	'-'  reduce 37
	'!'  reduce 37
	'['  reduce 37
	'}'  reduce 37
	'('  reduce 37

	def_variable_completa  goto 56
	lista_sentencias  goto 57


state 46
	main : FUNC main_id '(' ')' '{' . lista_def_variables lista_sentencias '}'  (33)
	lista_def_variables : .  (20)

	.  reduce 20

	lista_def_variables  goto 58


state 47
	struct : STRUCT '{' lista_campos '}' .  (5)

	.  reduce 5


state 48
	lista_campos : lista_campos campo .  (7)

	.  reduce 7


state 49
	campo : lista_id tipo . ';'  (6)

	';'  shift 59
	.  error


state 50
	llaves_array : '[' CTE_ENTERA ']' llaves_array .  (3)

	.  reduce 3


state 51
	tipo_simple : INT .  (14)

	.  reduce 14


state 52
	tipo_simple : FLOAT .  (15)

	.  reduce 15


state 53
	tipo_simple : CHAR .  (16)

	.  reduce 16


state 54
	tipo_funcion : '(' lista_parametro_tipo_funcion ')' tipo_simple .  (31)

	.  reduce 31


state 55
	lista_parametro_tipo : lista_parametro_tipo ',' def_variable .  (29)

	.  reduce 29


state 56
	lista_def_variables : lista_def_variables def_variable_completa .  (19)

	.  reduce 19


state 57
	def_funcion : FUNC ID tipo_funcion '{' lista_def_variables lista_sentencias . '}'  (35)
	lista_sentencias : lista_sentencias . sentencia  (36)

	CTE_ENTERA  shift 60
	CTE_CHAR  shift 61
	CTE_REAL  shift 62
	ID  shift 63
	READ  shift 64
	WRITE  shift 65
	WHILE  shift 66
	IF  shift 67
	INT  shift 14
	FLOAT  shift 15
	CHAR  shift 16
	STRUCT  shift 17
	RETURN  shift 68
	FOR  shift 69
	DO  shift 70
	'-'  shift 71
	'!'  shift 72
	'['  shift 18
	'}'  shift 73
	'('  shift 74
	.  error

	llaves_array  goto 20
	array  goto 21
	tipo  goto 75
	struct  goto 23
	sentencia  goto 76
	expresion  goto 77
	if_else  goto 78
	while  goto 79
	asignacion  goto 80
	for  goto 81
	dowhile  goto 82
	ternario  goto 83


state 58
	lista_def_variables : lista_def_variables . def_variable_completa  (19)
	main : FUNC main_id '(' ')' '{' lista_def_variables . lista_sentencias '}'  (33)
	lista_sentencias : .  (37)

	VAR  shift 3
	CTE_ENTERA  reduce 37
	CTE_CHAR  reduce 37
	CTE_REAL  reduce 37
	ID  reduce 37
	READ  reduce 37
	WRITE  reduce 37
	WHILE  reduce 37
	IF  reduce 37
	INT  reduce 37
	FLOAT  reduce 37
	CHAR  reduce 37
	STRUCT  reduce 37
	RETURN  reduce 37
	FOR  reduce 37
	DO  reduce 37
	'-'  reduce 37
	'!'  reduce 37
	'['  reduce 37
	'}'  reduce 37
	'('  reduce 37

	def_variable_completa  goto 56
	lista_sentencias  goto 84


state 59
	campo : lista_id tipo ';' .  (6)

	.  reduce 6


state 60
	expresion : CTE_ENTERA .  (87)

	.  reduce 87


state 61
	expresion : CTE_CHAR .  (85)

	.  reduce 85


state 62
	expresion : CTE_REAL .  (86)

	.  reduce 86


state 63
	sentencia : ID . '(' lista_expresiones_llamada_fun ')' ';'  (44)
	expresion : ID . '(' lista_expresiones_llamada_fun ')'  (76)
	expresion : ID .  (84)

	'('  shift 85
	NOT_EQ  reduce 84
	AND  reduce 84
	OR  reduce 84
	EQ  reduce 84
	L_EQ  reduce 84
	G_EQ  reduce 84
	XOR  reduce 84
	'='  reduce 84
	'>'  reduce 84
	'<'  reduce 84
	'+'  reduce 84
	'-'  reduce 84
	'*'  reduce 84
	'/'  reduce 84
	'%'  reduce 84
	'!'  reduce 84
	'['  reduce 84
	'.'  reduce 84


state 64
	sentencia : READ . '(' lista_expresiones ')' ';'  (39)

	'('  shift 86
	.  error


state 65
	sentencia : WRITE . '(' lista_expresiones ')' ';'  (40)

	'('  shift 87
	.  error


state 66
	while : WHILE . '(' expresion ')' '{' lista_sentencias '}'  (55)
	while : WHILE . expresion '{' lista_sentencias '}'  (56)

	CTE_ENTERA  shift 60
	CTE_CHAR  shift 61
	CTE_REAL  shift 62
	ID  shift 88
	INT  shift 14
	FLOAT  shift 15
	CHAR  shift 16
	STRUCT  shift 17
	'-'  shift 71
	'!'  shift 72
	'['  shift 18
	'('  shift 89
	.  error

	llaves_array  goto 20
	array  goto 21
	tipo  goto 75
	struct  goto 23
	expresion  goto 90
	ternario  goto 83


state 67
	if_else : IF . expresion '{' lista_sentencias '}' ELSE '{' lista_sentencias '}'  (51)
	if_else : IF . expresion '{' lista_sentencias '}'  (52)
	if_else : IF . '(' expresion ')' '{' lista_sentencias '}' ELSE '{' lista_sentencias '}'  (53)
	if_else : IF . '(' expresion ')' '{' lista_sentencias '}'  (54)

	CTE_ENTERA  shift 60
	CTE_CHAR  shift 61
	CTE_REAL  shift 62
	ID  shift 88
	INT  shift 14
	FLOAT  shift 15
	CHAR  shift 16
	STRUCT  shift 17
	'-'  shift 71
	'!'  shift 72
	'['  shift 18
	'('  shift 91
	.  error

	llaves_array  goto 20
	array  goto 21
	tipo  goto 75
	struct  goto 23
	expresion  goto 92
	ternario  goto 83


state 68
	sentencia : RETURN . expresion ';'  (38)

	CTE_ENTERA  shift 60
	CTE_CHAR  shift 61
	CTE_REAL  shift 62
	ID  shift 88
	INT  shift 14
	FLOAT  shift 15
	CHAR  shift 16
	STRUCT  shift 17
	'-'  shift 71
	'!'  shift 72
	'['  shift 18
	'('  shift 74
	.  error

	llaves_array  goto 20
	array  goto 21
	tipo  goto 75
	struct  goto 23
	expresion  goto 93
	ternario  goto 83


state 69
	for : FOR . '(' asignacion ';' expresion ';' asignacion ')' '{' lista_sentencias '}'  (50)

	'('  shift 94
	.  error


state 70
	dowhile : DO . '{' lista_sentencias '}' WHILE '(' expresion ')'  (57)

	'{'  shift 95
	.  error


state 71
	expresion : '-' . expresion  (81)

	CTE_ENTERA  shift 60
	CTE_CHAR  shift 61
	CTE_REAL  shift 62
	ID  shift 88
	INT  shift 14
	FLOAT  shift 15
	CHAR  shift 16
	STRUCT  shift 17
	'-'  shift 71
	'!'  shift 72
	'['  shift 18
	'('  shift 74
	.  error

	llaves_array  goto 20
	array  goto 21
	tipo  goto 75
	struct  goto 23
	expresion  goto 96
	ternario  goto 83


state 72
	expresion : '!' . expresion  (83)

	CTE_ENTERA  shift 60
	CTE_CHAR  shift 61
	CTE_REAL  shift 62
	ID  shift 88
	INT  shift 14
	FLOAT  shift 15
	CHAR  shift 16
	STRUCT  shift 17
	'-'  shift 71
	'!'  shift 72
	'['  shift 18
	'('  shift 74
	.  error

	llaves_array  goto 20
	array  goto 21
	tipo  goto 75
	struct  goto 23
	expresion  goto 97
	ternario  goto 83


state 73
	def_funcion : FUNC ID tipo_funcion '{' lista_def_variables lista_sentencias '}' .  (35)

	.  reduce 35


state 74
	expresion : '(' . expresion ')'  (82)
	ternario : '(' . expresion ')' '?' expresion ':' expresion  (89)

	CTE_ENTERA  shift 60
	CTE_CHAR  shift 61
	CTE_REAL  shift 62
	ID  shift 88
	INT  shift 14
	FLOAT  shift 15
	CHAR  shift 16
	STRUCT  shift 17
	'-'  shift 71
	'!'  shift 72
	'['  shift 18
	'('  shift 74
	.  error

	llaves_array  goto 20
	array  goto 21
	tipo  goto 75
	struct  goto 23
	expresion  goto 98
	ternario  goto 83


state 75
	expresion : tipo . '(' expresion ')'  (77)

	'('  shift 99
	.  error


state 76
	lista_sentencias : lista_sentencias sentencia .  (36)

	.  reduce 36


state 77
	asignacion : expresion . '=' expresion  (47)
	asignacion : expresion . '+' '+'  (48)
	asignacion : expresion . '-' '-'  (49)
	expresion : expresion . '+' expresion  (62)
	expresion : expresion . '*' expresion  (63)
	expresion : expresion . '/' expresion  (64)
	expresion : expresion . '-' expresion  (65)
	expresion : expresion . '%' expresion  (66)
	expresion : expresion . EQ expresion  (67)
	expresion : expresion . NOT_EQ expresion  (68)
	expresion : expresion . '>' expresion  (69)
	expresion : expresion . '<' expresion  (70)
	expresion : expresion . L_EQ expresion  (71)
	expresion : expresion . G_EQ expresion  (72)
	expresion : expresion . AND expresion  (73)
	expresion : expresion . OR expresion  (74)
	expresion : expresion . XOR expresion  (75)
	expresion : expresion . '[' expresion ']'  (78)
	expresion : expresion . '.' ID  (79)
	expresion : expresion . '!' expresion  (80)

	NOT_EQ  shift 100
	AND  shift 101
	OR  shift 102
	EQ  shift 103
	L_EQ  shift 104
	G_EQ  shift 105
	XOR  shift 106
	'='  shift 107
	'>'  shift 108
	'<'  shift 109
	'+'  shift 110
	'-'  shift 111
	'*'  shift 112
	'/'  shift 113
	'%'  shift 114
	'!'  shift 115
	'['  shift 116
	'.'  shift 117
	.  error


state 78
	sentencia : if_else .  (41)

	.  reduce 41


state 79
	sentencia : while .  (42)

	.  reduce 42


state 80
	sentencia : asignacion . ';'  (43)

	';'  shift 118
	.  error


state 81
	sentencia : for .  (45)

	.  reduce 45


state 82
	sentencia : dowhile .  (46)

	.  reduce 46


state 83
	expresion : ternario .  (88)

	.  reduce 88


state 84
	main : FUNC main_id '(' ')' '{' lista_def_variables lista_sentencias . '}'  (33)
	lista_sentencias : lista_sentencias . sentencia  (36)

	CTE_ENTERA  shift 60
	CTE_CHAR  shift 61
	CTE_REAL  shift 62
	ID  shift 63
	READ  shift 64
	WRITE  shift 65
	WHILE  shift 66
	IF  shift 67
	INT  shift 14
	FLOAT  shift 15
	CHAR  shift 16
	STRUCT  shift 17
	RETURN  shift 68
	FOR  shift 69
	DO  shift 70
	'-'  shift 71
	'!'  shift 72
	'['  shift 18
	'}'  shift 119
	'('  shift 74
	.  error

	llaves_array  goto 20
	array  goto 21
	tipo  goto 75
	struct  goto 23
	sentencia  goto 76
	expresion  goto 77
	if_else  goto 78
	while  goto 79
	asignacion  goto 80
	for  goto 81
	dowhile  goto 82
	ternario  goto 83


state 85
	sentencia : ID '(' . lista_expresiones_llamada_fun ')' ';'  (44)
	expresion : ID '(' . lista_expresiones_llamada_fun ')'  (76)
	lista_expresiones_llamada_fun : .  (59)

	CTE_ENTERA  shift 60
	CTE_CHAR  shift 61
	CTE_REAL  shift 62
	ID  shift 88
	INT  shift 14
	FLOAT  shift 15
	CHAR  shift 16
	STRUCT  shift 17
	'-'  shift 71
	'!'  shift 72
	'['  shift 18
	'('  shift 74
	')'  reduce 59

	llaves_array  goto 20
	array  goto 21
	tipo  goto 75
	struct  goto 23
	expresion  goto 120
	lista_expresiones  goto 121
	lista_expresiones_llamada_fun  goto 122
	ternario  goto 83


state 86
	sentencia : READ '(' . lista_expresiones ')' ';'  (39)

	CTE_ENTERA  shift 60
	CTE_CHAR  shift 61
	CTE_REAL  shift 62
	ID  shift 88
	INT  shift 14
	FLOAT  shift 15
	CHAR  shift 16
	STRUCT  shift 17
	'-'  shift 71
	'!'  shift 72
	'['  shift 18
	'('  shift 74
	.  error

	llaves_array  goto 20
	array  goto 21
	tipo  goto 75
	struct  goto 23
	expresion  goto 120
	lista_expresiones  goto 123
	ternario  goto 83


state 87
	sentencia : WRITE '(' . lista_expresiones ')' ';'  (40)

	CTE_ENTERA  shift 60
	CTE_CHAR  shift 61
	CTE_REAL  shift 62
	ID  shift 88
	INT  shift 14
	FLOAT  shift 15
	CHAR  shift 16
	STRUCT  shift 17
	'-'  shift 71
	'!'  shift 72
	'['  shift 18
	'('  shift 74
	.  error

	llaves_array  goto 20
	array  goto 21
	tipo  goto 75
	struct  goto 23
	expresion  goto 120
	lista_expresiones  goto 124
	ternario  goto 83


state 88
	expresion : ID . '(' lista_expresiones_llamada_fun ')'  (76)
	expresion : ID .  (84)

	'('  shift 125
	NOT_EQ  reduce 84
	AND  reduce 84
	OR  reduce 84
	EQ  reduce 84
	L_EQ  reduce 84
	G_EQ  reduce 84
	XOR  reduce 84
	'='  reduce 84
	'>'  reduce 84
	'<'  reduce 84
	'+'  reduce 84
	'-'  reduce 84
	'*'  reduce 84
	'/'  reduce 84
	'%'  reduce 84
	'!'  reduce 84
	'['  reduce 84
	']'  reduce 84
	'{'  reduce 84
	':'  reduce 84
	'.'  reduce 84
	')'  reduce 84
	';'  reduce 84
	','  reduce 84


state 89
	while : WHILE '(' . expresion ')' '{' lista_sentencias '}'  (55)
	expresion : '(' . expresion ')'  (82)
	ternario : '(' . expresion ')' '?' expresion ':' expresion  (89)

	CTE_ENTERA  shift 60
	CTE_CHAR  shift 61
	CTE_REAL  shift 62
	ID  shift 88
	INT  shift 14
	FLOAT  shift 15
	CHAR  shift 16
	STRUCT  shift 17
	'-'  shift 71
	'!'  shift 72
	'['  shift 18
	'('  shift 74
	.  error

	llaves_array  goto 20
	array  goto 21
	tipo  goto 75
	struct  goto 23
	expresion  goto 126
	ternario  goto 83


state 90
	while : WHILE expresion . '{' lista_sentencias '}'  (56)
	expresion : expresion . '+' expresion  (62)
	expresion : expresion . '*' expresion  (63)
	expresion : expresion . '/' expresion  (64)
	expresion : expresion . '-' expresion  (65)
	expresion : expresion . '%' expresion  (66)
	expresion : expresion . EQ expresion  (67)
	expresion : expresion . NOT_EQ expresion  (68)
	expresion : expresion . '>' expresion  (69)
	expresion : expresion . '<' expresion  (70)
	expresion : expresion . L_EQ expresion  (71)
	expresion : expresion . G_EQ expresion  (72)
	expresion : expresion . AND expresion  (73)
	expresion : expresion . OR expresion  (74)
	expresion : expresion . XOR expresion  (75)
	expresion : expresion . '[' expresion ']'  (78)
	expresion : expresion . '.' ID  (79)
	expresion : expresion . '!' expresion  (80)

	NOT_EQ  shift 100
	AND  shift 101
	OR  shift 102
	EQ  shift 103
	L_EQ  shift 104
	G_EQ  shift 105
	XOR  shift 106
	'>'  shift 108
	'<'  shift 109
	'+'  shift 127
	'-'  shift 128
	'*'  shift 112
	'/'  shift 113
	'%'  shift 114
	'!'  shift 115
	'['  shift 116
	'{'  shift 129
	'.'  shift 117
	.  error


state 91
	if_else : IF '(' . expresion ')' '{' lista_sentencias '}' ELSE '{' lista_sentencias '}'  (53)
	if_else : IF '(' . expresion ')' '{' lista_sentencias '}'  (54)
	expresion : '(' . expresion ')'  (82)
	ternario : '(' . expresion ')' '?' expresion ':' expresion  (89)

	CTE_ENTERA  shift 60
	CTE_CHAR  shift 61
	CTE_REAL  shift 62
	ID  shift 88
	INT  shift 14
	FLOAT  shift 15
	CHAR  shift 16
	STRUCT  shift 17
	'-'  shift 71
	'!'  shift 72
	'['  shift 18
	'('  shift 74
	.  error

	llaves_array  goto 20
	array  goto 21
	tipo  goto 75
	struct  goto 23
	expresion  goto 130
	ternario  goto 83


state 92
	if_else : IF expresion . '{' lista_sentencias '}' ELSE '{' lista_sentencias '}'  (51)
	if_else : IF expresion . '{' lista_sentencias '}'  (52)
	expresion : expresion . '+' expresion  (62)
	expresion : expresion . '*' expresion  (63)
	expresion : expresion . '/' expresion  (64)
	expresion : expresion . '-' expresion  (65)
	expresion : expresion . '%' expresion  (66)
	expresion : expresion . EQ expresion  (67)
	expresion : expresion . NOT_EQ expresion  (68)
	expresion : expresion . '>' expresion  (69)
	expresion : expresion . '<' expresion  (70)
	expresion : expresion . L_EQ expresion  (71)
	expresion : expresion . G_EQ expresion  (72)
	expresion : expresion . AND expresion  (73)
	expresion : expresion . OR expresion  (74)
	expresion : expresion . XOR expresion  (75)
	expresion : expresion . '[' expresion ']'  (78)
	expresion : expresion . '.' ID  (79)
	expresion : expresion . '!' expresion  (80)

	NOT_EQ  shift 100
	AND  shift 101
	OR  shift 102
	EQ  shift 103
	L_EQ  shift 104
	G_EQ  shift 105
	XOR  shift 106
	'>'  shift 108
	'<'  shift 109
	'+'  shift 127
	'-'  shift 128
	'*'  shift 112
	'/'  shift 113
	'%'  shift 114
	'!'  shift 115
	'['  shift 116
	'{'  shift 131
	'.'  shift 117
	.  error


state 93
	sentencia : RETURN expresion . ';'  (38)
	expresion : expresion . '+' expresion  (62)
	expresion : expresion . '*' expresion  (63)
	expresion : expresion . '/' expresion  (64)
	expresion : expresion . '-' expresion  (65)
	expresion : expresion . '%' expresion  (66)
	expresion : expresion . EQ expresion  (67)
	expresion : expresion . NOT_EQ expresion  (68)
	expresion : expresion . '>' expresion  (69)
	expresion : expresion . '<' expresion  (70)
	expresion : expresion . L_EQ expresion  (71)
	expresion : expresion . G_EQ expresion  (72)
	expresion : expresion . AND expresion  (73)
	expresion : expresion . OR expresion  (74)
	expresion : expresion . XOR expresion  (75)
	expresion : expresion . '[' expresion ']'  (78)
	expresion : expresion . '.' ID  (79)
	expresion : expresion . '!' expresion  (80)

	NOT_EQ  shift 100
	AND  shift 101
	OR  shift 102
	EQ  shift 103
	L_EQ  shift 104
	G_EQ  shift 105
	XOR  shift 106
	'>'  shift 108
	'<'  shift 109
	'+'  shift 127
	'-'  shift 128
	'*'  shift 112
	'/'  shift 113
	'%'  shift 114
	'!'  shift 115
	'['  shift 116
	'.'  shift 117
	';'  shift 132
	.  error


state 94
	for : FOR '(' . asignacion ';' expresion ';' asignacion ')' '{' lista_sentencias '}'  (50)

	CTE_ENTERA  shift 60
	CTE_CHAR  shift 61
	CTE_REAL  shift 62
	ID  shift 88
	INT  shift 14
	FLOAT  shift 15
	CHAR  shift 16
	STRUCT  shift 17
	'-'  shift 71
	'!'  shift 72
	'['  shift 18
	'('  shift 74
	.  error

	llaves_array  goto 20
	array  goto 21
	tipo  goto 75
	struct  goto 23
	expresion  goto 77
	asignacion  goto 133
	ternario  goto 83


state 95
	dowhile : DO '{' . lista_sentencias '}' WHILE '(' expresion ')'  (57)
	lista_sentencias : .  (37)

	.  reduce 37

	lista_sentencias  goto 134


state 96
	expresion : expresion . '+' expresion  (62)
	expresion : expresion . '*' expresion  (63)
	expresion : expresion . '/' expresion  (64)
	expresion : expresion . '-' expresion  (65)
	expresion : expresion . '%' expresion  (66)
	expresion : expresion . EQ expresion  (67)
	expresion : expresion . NOT_EQ expresion  (68)
	expresion : expresion . '>' expresion  (69)
	expresion : expresion . '<' expresion  (70)
	expresion : expresion . L_EQ expresion  (71)
	expresion : expresion . G_EQ expresion  (72)
	expresion : expresion . AND expresion  (73)
	expresion : expresion . OR expresion  (74)
	expresion : expresion . XOR expresion  (75)
	expresion : expresion . '[' expresion ']'  (78)
	expresion : expresion . '.' ID  (79)
	expresion : expresion . '!' expresion  (80)
	expresion : '-' expresion .  (81)

	'['  shift 116
	'.'  shift 117
	NOT_EQ  reduce 81
	AND  reduce 81
	OR  reduce 81
	EQ  reduce 81
	L_EQ  reduce 81
	G_EQ  reduce 81
	XOR  reduce 81
	'='  reduce 81
	'>'  reduce 81
	'<'  reduce 81
	'+'  reduce 81
	'-'  reduce 81
	'*'  reduce 81
	'/'  reduce 81
	'%'  reduce 81
	'!'  reduce 81
	']'  reduce 81
	'{'  reduce 81
	':'  reduce 81
	')'  reduce 81
	';'  reduce 81
	','  reduce 81

